# speedometer_ESP_32

./: CMakeLists.txt  README.md  sdkconfig
BLE/: CMakeLists.txt  ble_server.c  ble_server.h  main.c
components/bike_metrics/: CMakeLists.txt  bike_metrics.c  bike_metrics.h
components/ble/: CMakeLists.txt  ble_server.c  ble_server.h
components/display/: CMakeLists.txt  sh1106.c  sh1106.h
components/encoder/: CMakeLists.txt  encoder.c  encoder.h
components/hall_sensor/: CMakeLists.txt  hall_sensor.c  hall_sensor.h
components/tasks/: CMakeLists.txt  tasks.c  tasks.h
components/timer_utils/: CMakeLists.txt  timer_utils.c  timer_utils.h
components/uart/: CMakeLists.txt  uart.c  uart.h
main/: CMakeLists.txt  main.c  main.h  main1.c
